--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "cloudinary-vue": "^1.0.0",
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
