--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "build:pages": "DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
+    "build:pages:window": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:pages:window": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -15,6 +19,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "cloudinary-vue": "^1.0.0",
+    "cross-env": "^7.0.0",
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
