--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "nuxt start",
     "build:pages": "DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
-    "build:pages:window": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
-    "generate:pages:window": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
+    "build:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
