--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "cloudinary": "^1.19.0",
     "cloudinary-vue": "^1.0.0",
     "cross-env": "^7.0.0",
     "nuxt": "^2.11.0"
