--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "deploy" :"gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
@@ -19,6 +20,7 @@
     "cloudinary": "^1.19.0",
     "cloudinary-vue": "^1.0.0",
     "cross-env": "^7.0.0",
+    "gh-pages": "^2.2.0",
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
