--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix":"eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "deploy" :"gh-pages -d dist"
   },
   "dependencies": {
