--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "generate:pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:fix":"eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "deploy" :"gh-pages -d dist"
+    "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
@@ -21,8 +21,9 @@
     "cloudinary": "^1.19.0",
     "cloudinary-vue": "^1.0.0",
     "cross-env": "^7.0.0",
+    "dotenv": "^8.2.0",
     "gh-pages": "^2.2.0",
-    "nuxt": "^2.11.0"
+    "nuxt": "^2.14.4"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
